--- a/ultimate-tic-tac-toe/public/index.html
+++ b/ultimate-tic-tac-toe/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="%PUBLIC_URL%/tic-tac-toe.png"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link type="text/css" rel="stylesheet" href="w3.css" />
