--- a/ultimate-tic-tac-toe/public/index.html
+++ b/ultimate-tic-tac-toe/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0,
-      user-scalable=0">
+      user-scalable=0 viewport-fit=cover">
     <link rel="icon" href="%PUBLIC_URL%/tic-tac-toe.png"/>
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
